--- a/client/src/assets/less/layout.less
+++ b/client/src/assets/less/layout.less
@@ -15,6 +15,31 @@ input[readonly] {
     text-overflow: ellipsis;
 }
 
+.breadcrumb {
+    width: 100%;
+    background: #fff;
+    border: 1px solid #c8c8c8;
+    padding: 0.571em 1em;
+    font-size: 14px;
+
+    span:nth-child(1n+2):before {
+        content: '\e901';
+        font-family: 'primeicons';
+        margin: 0 8px;
+    }
+}
+
+.layout-mask {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #424242;
+    opacity: 0.7;
+    top: 0;
+    left: 0;
+}
+
 @media screen and (min-width: 768px) {
     .p-md-1,
     .p-md-2,
