--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="main">
       <div class="breadcrumb">
-        <span *ngFor="let label of [Locales.admin, 'Users']">{{label}}</span>
+        <span *ngFor="let label of [Locales.admin, Locales.users]">{{label}}</span>
       </div>
       <ft-table sortField="last" filter="admin-table" [columns]="cols" [data]="users" (onNotify)="eventTableHandler($event)">
         <ng-template pTemplate="firstHeader"></ng-template>
@@ -27,7 +27,26 @@
           <fa-icon [icon]="icons.faPencil" (click)="onEdit(rowData)" style="cursor: pointer"></fa-icon>
         </ng-template>
       </ft-table>
-      <p-confirmDialog key="confirmDialog" [header]="Locales.deleteHeader" [message]="Locales.deleteRecord" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+      <ft-dialog width="70" height="60" [labels]="[Locales.admin, Locales.users, selectedUser?.first + ' ' + selectedUser?.last]">
+        <ng-template pTemplate="Account">
+          <account-tab></account-tab>
+        </ng-template>
+        <ng-template pTemplate="Addresses">
+          <address-tab></address-tab>
+        </ng-template>
+        <ng-template pTemplate="Certificates/Ratings">
+          <certificate-tab></certificate-tab>
+        </ng-template>
+        <ng-template pTemplate="Contacts/Employers">
+          <contact-tab></contact-tab>
+        </ng-template>
+        <ng-template pTemplate="Courses/Endorsements">
+          <course-tab></course-tab>
+        </ng-template>
+        <ng-template pTemplate="Documents">
+          <document-tab></document-tab>
+        </ng-template>
+      </ft-dialog>
     </div>
   </div>
   <app-footer></app-footer>
