--- a/client/src/app/component/ft-table/ft-table.component.less
+++ b/client/src/app/component/ft-table/ft-table.component.less
@@ -35,6 +35,15 @@ th {
     padding: .5em;
 }
 
+.filter-radio:before {
+    padding: 0 20px 0 5px;
+}
+
+.filter-button span {
+    font-size: 12px;
+    padding: 0.3em 1em !important;
+}
+
 .chips {
     padding: 0 5px;
     width: 100%;
