--- a/client/src/assets/less/navmenu.less
+++ b/client/src/assets/less/navmenu.less
@@ -3,7 +3,7 @@
 .container {
     .topbar {
         .topbar-right {
-            padding: 22px;
+            padding: 1.25rem;
             display: block;
             margin-left: 25px;
             height: 100%;
