--- a/client/src/app/component/ft-dialog/ft-dialog.component.less
+++ b/client/src/app/component/ft-dialog/ft-dialog.component.less
@@ -9,7 +9,7 @@
     left: 0;
     text-align: center;
 
-    .close {
+    .close, .resize {
         background-color: #007ad9;
         color: #fff;
         width: 1.538em;
@@ -17,11 +17,14 @@
         line-height: 1.538em;
         text-align: center;
         position: absolute;
-        top: -0.769em;
-        right: -0.769em;
-        border-radius: 100%;
+        top: 0;
+        right: 0;
         border: 1px solid #fff;
         cursor: pointer;
+    }
+
+    .resize {
+        right:1.538em;
     }
 
     &>div {
