--- a/client/src/assets/less/constants.less
+++ b/client/src/assets/less/constants.less
@@ -1,5 +1,5 @@
 @topbar-height: 7vh;
 @footer-height: 5vh;
-@left-menu-width: 235px;
+@left-menu-width: 12rem;
 @menu-close-speed: 0.3s;
 @modal-top: @topbar-height + 1;
