--- a/client/src/app/component/ft-table/ft-table.component.less
+++ b/client/src/app/component/ft-table/ft-table.component.less
@@ -35,8 +35,10 @@ th {
     padding: .5em;
 }
 
-.filter-radio:before {
-    padding: 0 20px 0 5px;
+.filter-radio i:before {
+    margin: 2px 20px 0 7px;
+    vertical-align: middle;
+    display: inline-block;
 }
 
 .filter-button span {
