--- a/client/src/app/component/ft-table/ft-table.component.less
+++ b/client/src/app/component/ft-table/ft-table.component.less
@@ -41,9 +41,14 @@ th {
     display: inline-block;
 }
 
-.filter-button span {
-    font-size: 12px;
-    padding: 0.3em 1em !important;
+.ui-fluid .filter-button {
+    .ui-button {
+        width: auto;
+    }
+    &>span {
+        font-size: 12px;
+        padding: 0.3em 1em !important;
+    }
 }
 
 .chips {
