--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -1,4 +1,5 @@
 @import 'constants.less';
+@import 'theme.less';
 
 html {
     height: 100%;
@@ -18,27 +19,12 @@ body {
     background-color: #f4f3f8;
 }
 
-body .ui-datepicker-buttonbar .ui-button.ui-state-default.ui-button-secondary {
-    background-color: transparent;
-    border-color: transparent;
-    color: #2196F3;
-}
-
-body .ui-table-hoverable-rows .ui-table-tbody > tr:hover {
-    background: #d5edff;
-    color: #495057;
-}
-
 app-toast {
     position: fixed;
     top: 20px;
     right: 20px;
     width: 25rem;
     z-index: 1020;
-}
-
-a {
-    cursor: pointer;
 }
 
 .green {
@@ -54,23 +40,6 @@ a {
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-}
-
-.ui-button {
-    border-radius: 6px;
-}
-
-.ui-button.ui-button-text {
-    padding: 0.429em 1em;
-    width: auto !important;
-}
-
-*,
-&:before,
-&:after {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
 }
 
 :not(form).ng-dirty.ng-invalid {
