--- a/client/src/app/authentication/auth.component.html
+++ b/client/src/app/authentication/auth.component.html
@@ -95,7 +95,7 @@
 
                 <!-- Reusable templates -->
                 <ng-template #ResetPassword>
-                    <div>
+                    <div class="ui-fluid">
                         <p>{{Locales.chooseNewPassword}}</p>
                         <div class="row">
                             <label class="p-col-fixed">{{Locales.password}}*</label>
