--- a/client/src/app/admin/tabs/address-tab.component.html
+++ b/client/src/app/admin/tabs/address-tab.component.html
@@ -1,3 +1,31 @@
 <div>
-    <h1>Addresses</h1>
+    <h1>Address</h1>
+    <div class="card-body">
+        <form [formGroup]="registerForm" #myForm="ngForm">
+            <div class="row ui-fluid p-col-12 p-md-4" *ngIf="addresses.length > 0">
+                <label class=" p-col-fixed">{{Locales.exisitngRecords}}</label>
+                <p-dropdown appendTo="body" [options]="addresses" optionLabel="description"></p-dropdown>
+            </div>
+            <div class="ui-fluid" *ngFor="let c of controls">
+                <div class="row p-col-12 p-md-4">
+                    <label class=" p-col-fixed">{{c.header}}</label>
+                    <input *ngIf="c.type =='input'" [formControlName]="c.field" pInputText required />
+                    <p-dropdown *ngIf="c.type=='popup'" appendTo="body" [formControlName]="c.field" [options]="c.value" [placeholder]="c.placeholder"></p-dropdown>
+                    <p-autoComplete *ngIf="c.type == 'auto'" ftAutoComplete [formControlName]="c.field" [data]="c.value"></p-autoComplete>
+                    <p-inputMask *ngIf="c.type=='mask'" [mask]="c.value" [placeholder]="c.placeholder" [formControlName]="c.field"></p-inputMask>
+                    <div *ngIf="c.type=='switch'"><p-inputSwitch [formControlName]="c.field" binary="true"></p-inputSwitch></div>
+                    <div *ngIf="f[c.field].errors" style="color: red; ">
+                        <div *ngIf="f[c.field].errors.required ">{{c.header}} is required</div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" style="margin: 20px 0">
+                <button class="ui-button ui-button-text " (click)="onDelete()">{{Locales.delete}}</button>
+                <div class="right">
+                    <button class="ui-button ui-button-text " (click)="onSubmit()" [disabled]="!myForm.form.valid ">{{Locales.save}}</button>
+                    <button class="ui-button ui-button-text ui-button-secondary " style="margin-left: 15px" (click)="onReset()">{{Locales.reset}}</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
